# INFOGA-Bonus

./: CMakeLists.txt  ConvexHullBase.cpp  ConvexHullBase.h  DivideAndConquer.cpp  DivideAndConquer.h  DivideConquer.cpp  DivideConquer.h  JarvisMarch.cpp  JarvisMarch.h  PerformanceTests.cpp  PerformanceTests.h  TestConvexHull.cpp  TestConvexHull.h  main.cpp
scripts/: Plot.py
